Update webpack issues
added font capability and removed scrollbar thumb that was causing packing issues

--- a/src/sidebar-styles.css
+++ b/src/sidebar-styles.css
@@ -1,6 +1,3 @@
-::-webkit-scrollbar-thumb {
-    
-}
 
 
 #side-bar { 
